# Tree_This_Folder

./: .treeignore  Folder_Structure.txt  README.md  Tree_This_Folder.md  Tree_This_Folder.ui  add.bat  config.ini  pyproject.toml  remove.bat  start.int  start.py  start.spec  点我.bat
.history/: README_20240103193838.md  README_20240103193918.md  README_20240103194140.md
binary/: binary.json  requirements.txt  tree2json.py  tree2puml.spec  treemd.spec  treeseedir.py  treeseedir.spec
runtime/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _uuid.pyd  _wmi.pyd  _zoneinfo.pyd  pyexpat.pyd  python.cat  python312._pth  python313._pth  select.pyd  unicodedata.pyd  winsound.pyd
scripts/: tests.py  tree2json.py  tree2puml.py  treemd.py  treeseedir.py  treetxt.py
仅复制/: add1.bat  main1.bat  remove_treejustcopy.bat  treejustcopy.bat
复制且输出md/: add0.bat  add_treemd.bat  main0.bat  remove_treemd.bat  treemd.py  treemd.reg
复制且输出md或txt/: add0.bat  add_treeMDorTXT.bat  remove.bat  remove_treeMDorTXT.bat  生成txt_子项.reg  生成文件夹结构_目录.reg
复制且输出md或txt或puml/: add0.bat  add_treeMDorTXTorPUML.bat  remove.bat  remove_treeMDorTXTorPUML.bat  生成md_子项.reg  生成plantuml_子项.reg  生成文件夹结构_目录.reg
复制且输出md或txt或puml或tree/: add_treeMDorTXTorPUMLorTREE.bat  remove_treeMDorTXTorPUMLorTREE.bat  生成tree_子项.reg  生成文件夹结构_目录.reg
复制且输出puml/: main0.bat  tree2puml.py
复制且输出tree/: add_treetree.bat  remove_treetree.bat  tree.txt  treetree.reg
复制且输出txt/: add0.bat  main0.bat  (+4 more)
(+13 files in other folders)
